fix: stickers alignment on all screen sizes

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -89,7 +89,7 @@
 
 .stickerWrapper {
 	position: absolute;
-	bottom: 80%;
+	bottom: 85%;
 	right: -5px;
 	transform: rotate(24deg);
 	z-index: 0;
